--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "animejs": "^3.2.1",
     "clsx": "^1.1.1",
     "ethers": "^5.5.1",
     "react": "^17.0.2",
