--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "test-on-19-jan-22",
+  "name": "care4u",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^6.4.3",
+    "@craco/craco": "^7.0.0",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@hookform/resolvers": "^2.9.10",
     "@mui/icons-material": "^5.3.0",
     "@mui/material": "^5.3.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "animejs": "^3.2.1",
     "clsx": "^1.1.1",
     "ethers": "^5.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.41.5",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "sass": "^1.49.0",
@@ -48,9 +51,13 @@
     ]
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.31.0",
+    "eslint-plugin-react": "^7.31.11",
     "husky": "^7.0.0",
     "prettier": "^2.5.1",
-    "pretty-quick": "^3.1.3"
+    "pretty-quick": "^3.1.3",
+    "zod": "^3.20.2"
   },
   "engines": {
     "node": "14.17.3",
