--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "animejs": "^3.2.1",
-    "clsx": "^1.1.1",
-    "ethers": "^5.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.41.5",
@@ -22,8 +20,7 @@
     "react-scripts": "5.0.0",
     "sass": "^1.49.0",
     "swiper": "^7.4.1",
-    "web-vitals": "^2.1.3",
-    "web3modal": "^1.9.5"
+    "web-vitals": "^2.1.3"
   },
   "scripts": {
     "start": "craco start",
